# ha-edilkamin

./: .gitignore  .pre-commit-config.yaml  LICENCE.md  README.md  hacs.json  pyproject.toml  release.sh  requirements.test.txt  requirements_base.txt  requirements_core_min.txt
.github/: dependabot.yml
.github/workflows/: pylint.yml  release.yml  ruff.yml  tests.yml
custom_components/edilkamin/: __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  coordinator.py  fan.py  manifest.json  sensor.py  strings.json  switch.py
custom_components/edilkamin/api/: auth.py  edilkamin_async_api.py
custom_components/edilkamin/translations/: de.json  en.json  fr.json
tests/: README.md  test_coordinator_is_token_expired.py  test_coordinator_refresh_token.py  test_coordinator_safety.py  test_init.py
