[project]
name = "ha-edilkamin"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "edilkamin==1.4.1",
    "macaddress==2.0.2",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "pytest-homeassistant-custom-component==0.13.190",
    "pytest-aiohttp==1.0.5",
    "homeassistant==2024.12.0",
]

[tool.coverage.run]
source = ["custom_components"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplemented()",
    "if __name__ == '__main__':",
    "main()",
]
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git"]
addopts = [
    "--strict",
    "--cov=custom_components",
]

[tool.flake8]
max-line-length = 88
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202: No blank lines allowed after function docstring
# W504: line break after binary operator
ignore = [
    "E501",
    "W503",
    "E203",
    "D202",
    "W504",
]

[tool.isort]
# splits long import on multiple lines indented by 4 spaces
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
indent = "    "
# by default isort don't check module indexes
not_skip = "__init__.py"
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
sections = ["FUTURE", "STDLIB", "INBETWEENS", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = ["custom_components", "tests"]
forced_separate = ["tests"]
combine_as_imports = true

[tool.mypy]
python_version = "3.7"
ignore_errors = true
follow_imports = "silent"
ignore_missing_imports = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
